<resources>
    <string name="app_name">YU Market</string>

    <string name="home">홈</string>
    <string name="store">스토어</string>
    <string name="chatting">채팅</string>
    <string name="map">지도</string>
    <string name="my_info">내 정보</string>

    <string name="cannot_load_address_info">위치 정보를 불러올 수 없습니다.</string>
    <string name="cannot_load_data">데이터를 불러올 수 없습니다. 나중에 다시 시도해주세요.</string>
    <string name="new_sale_item">새로운 할인상품</string>
    <string name="nearby_market">내 주변의 동네마켓</string>
    <string name="show_more">지도에서 더보기 ></string>
    <string name="no_address_info_found">주소 정보 없음</string>

    <string name="loading">로딩 중…</string>
    <string name="review">리뷰</string>
    <string name="market_open">OPEN</string>
    <string name="market_closed">CLOSED</string>

    <string name="hobby_ativity">취미 활동</string>
    <string name="home_item_stock">%1$d개 주문 가능</string>
    <string name="home_item_discount_percent_format">%1$d%2$s</string>
    <string name="home_item_price_format">%1$d원</string>

    <string name="distance_unit_kilometer">km</string>
    <string name="distance_unit_meter">m</string>

    <string name="like_market">찜한 마켓</string>
    <string name="like_item">찜한 상품</string>

    <string name="distance_format">%1$.1fkm</string>
    <string name="like_item_market_and_distance_format">%1$s | %2$.1fkm</string>
    <string name="discount_percent_format">%1$d%%</string>
    <string name="price_format">%1$,d원</string>

    <string name="POI_food_beverage">음식점;</string>
    <string name="POI_service">서비스;</string>
    <string name="POI_fashion_accessories">패션;</string>
    <string name="POI_supermarket">편의점;슈퍼마켓;</string>
    <string name="POI_fashion_clothes">의류;</string>
    <string name="POI_etc">주차장;숙박</string>


    <string name="spring"><b>다가오는 봄</b>, 필요한 서비스를 찾아보세요</string>
    <string name="hobby_string">우리 동네에서 인기 있는 <b>취미활동</b>이에요</string>
    <string name="nearly"><b>가까운 곳</b>에서 빠르게 거래해보세요</string>
    <string name="annival"><b>5월의 기념일</b>을 준비해보세요</string>

    <string name="menu">상품정보</string>
    <string name="shopinform">가게정보</string>
    <string name="call">전화</string>
    <string name="share">공유</string>
    <string name="like">찜</string>
    <string name="chat">채팅</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="id_hint"><font size="15">아이디를 입력해주세요</font></string>
    <string name="pw_hint"><font size="15">비밀번호를 입력해주세요</font></string>
    <string name="map_search">도로명, 건물명 또는 지번으로 검색</string>
</resources>